--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "dev": "vite",
     "test": "jest",
     "build": "tsc -b && vite build",
+    "tsc": "tsc -b",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "mobx": "^6.13.7",
@@ -31,8 +35,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.4",
     "typescript": "~5.8.3",
